This is the HISTORY file for Expect.  Modifications made by Cygnus
support are in ChangeLog. - Don

Date	Version	Description
-------	-------	------------------------------------------------------
		Signal handler sometimes sent error to stderr inappropriately.

4/27/00 5.31.7	Rob Savoye fixed Debian ptys and properly checking of libpt.

3/8/00  5.31.6	Petrus Vloet <petrus.vloet@siemens.at> noted that Expect
		installed tclRegexp.h which included regex.h which of course
		misbehaves when it reads the system's version.  This is new
		since 8.0.  Since I need to revise the Clib anyway (which
		is what this install was for), I'll back this out for now.

3/6/00	5.31.5	Larry Virden noted that configure checked for threads twice.

2/19/00 5.31.4	Omer Azmon <oazmon@telsoft-solutions.com> note errors in
		pty_termios.c in exp_pty_test that caused problems during
		pty testing.

		Jeffrey Hobbs recommended having configure accept and warn
		about --enable-threads.

		John Ellson <ellson@lucent.com> noted configure's autoconf
		testing had leftover debugging code.  Also provided a fix for
		building w/shared libs on HP - appeared to be leftover from
		earlier Tcl-required configuration that has now disappeared.

		Susan Muston <smuston@crosskeys.com> noted that exp_wait with
		no spawned processes exited immediately which is different
		than 5.29 behavior which reported "no children".  This new
		behavior was evidentally a gratuitous change during the
		channel driver addition.  Backed out.  At the same time,
		neither behavior matches documentation - doc should be fixed
		and improved except I'm not sure if the behavior should yet
		be something else (depending if stdin closed or not).

		istvan.nadas@epfl.ch reported "spawn cat;exp_open" failed.
		Uninited variable.

		Scriptics reported memory leak.  Was bug in parse_expect_args.

		"Michael P. Reilly" <arcege@shore.net> noted clib was hanging
		in spawn code.  status_pipe wasn't being closed.
